audiomuse-ai/audiomuse-ai-test-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: audiomuse-ai-test
  namespace: audiomuse-ai
spec:
  containers:
    - name: audiomuse-ai-test
      image: nicolaka/netshoot
      command: ["/bin/bash", "-c", "sleep infinity"]
