audiomuse-ai/rendered.yaml
---
# Source: audiomuse-ai/templates/flask.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-audiomuse-ai-flask-service
  namespace: audiomuse-ai # Use .Release.Namespace
  labels:
    helm.sh/chart: audiomuse-ai-1.0.36
    app.kubernetes.io/name: audiomuse-ai
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: flask
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: audiomuse-ai
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/component: flask
---
# Source: audiomuse-ai/templates/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-audiomuse-ai-postgres
  namespace: audiomuse-ai # Use .Release.Namespace
  labels:
    helm.sh/chart: audiomuse-ai-1.0.36
    app.kubernetes.io/name: audiomuse-ai
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: postgres
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: postgres
      protocol: TCP
      name: postgres
  selector:
    app.kubernetes.io/name: audiomuse-ai
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/component: postgres
---
# Source: audiomuse-ai/templates/redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-audiomuse-ai-redis
  namespace: audiomuse-ai # Use .Release.Namespace
  labels:
    helm.sh/chart: audiomuse-ai-1.0.36
    app.kubernetes.io/name: audiomuse-ai
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: redis
spec:
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: redis
      protocol: TCP
      name: redis
  selector:
    app.kubernetes.io/name: audiomuse-ai
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/component: redis
---
# Source: audiomuse-ai/templates/flask.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-audiomuse-ai-flask
  namespace: audiomuse-ai # Use .Release.Namespace
  labels:
    helm.sh/chart: audiomuse-ai-1.0.36
    app.kubernetes.io/name: audiomuse-ai
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: flask
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: audiomuse-ai
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/component: flask
  template:
    metadata:
      labels:
        app.kubernetes.io/name: audiomuse-ai
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/component: flask
    spec:
      securityContext:
        runAsUser: 0
        runAsGroup: 0
        fsGroup: 0
      containers:
        - name: flask-app
          image: "ghcr.io/neptunehub/audiomuse-ai:0.8.6"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          volumeMounts:
            - name: app-temp-audio
              mountPath: /app/temp_audio
      volumes:
        - name: app-temp-audio
          emptyDir: {}
---
# Source: audiomuse-ai/templates/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-audiomuse-ai-postgres
  namespace: audiomuse-ai # Use .Release.Namespace
  labels:
    helm.sh/chart: audiomuse-ai-1.0.36
    app.kubernetes.io/name: audiomuse-ai
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: audiomuse-ai
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/component: postgres
  template:
    metadata:
      labels:
        app.kubernetes.io/name: audiomuse-ai
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/component: postgres
    spec:
      containers:
        - name: postgres
          image: "postgres:15-alpine"
          imagePullPolicy: "IfNotPresent"
          ports:
            - name: postgres
              containerPort: 5432
              protocol: TCP
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
          resources:
            limits:
              cpu: "1"
              memory: 2Gi
            requests:
              cpu: 250m
              memory: 256Mi
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: release-name-audiomuse-ai-postgres-pvc
---
# Source: audiomuse-ai/templates/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-audiomuse-ai-redis
  namespace: audiomuse-ai # Use .Release.Namespace
  labels:
    helm.sh/chart: audiomuse-ai-1.0.36
    app.kubernetes.io/name: audiomuse-ai
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: audiomuse-ai
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/component: redis
  template:
    metadata:
      labels:
        app.kubernetes.io/name: audiomuse-ai
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/component: redis
    spec:
      containers:
        - name: redis
          image: "redis:7-alpine"
          ports:
            - name: redis
              containerPort: 6379
              protocol: TCP
          resources:
            limits:
              cpu: "1"
              memory: 512Mi
            requests:
              cpu: 200m
              memory: 256Mi
---
# Source: audiomuse-ai/templates/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-audiomuse-ai-worker
  namespace: audiomuse-ai # Use .Release.Namespace
  labels:
    helm.sh/chart: audiomuse-ai-1.0.36
    app.kubernetes.io/name: audiomuse-ai
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: worker
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: audiomuse-ai
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/component: worker
  template:
    metadata:
      labels:
        app.kubernetes.io/name: audiomuse-ai
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/component: worker
    spec:
      securityContext:
        runAsUser: 0
        runAsGroup: 0
        fsGroup: 0
      containers:
        - name: rq-worker
          image: "ghcr.io/neptunehub/audiomuse-ai:0.8.6"
          imagePullPolicy: Always
          volumeMounts:
            - name: app-temp-audio
              mountPath: /app/temp_audio
      volumes:
        - name: app-temp-audio
          emptyDir: {}
